--- a/ariaspec/src/index.css
+++ b/ariaspec/src/index.css
@@ -8,9 +8,18 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #050a30;
+  color: white;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.nav li:hover{
+  background-color: white;
+  color: #050a30;
+  /* box-shadow: 0px 0px 18px 9px #fcfcfc; */
+  /* box-shadow: 0px 0px 20px 0px #fcfcfc; */
+  box-shadow: 0px 0px 12px 2px #fcfcfc;
 }
